VFS-6421 fixed horizontal overflow of query results

--- a/src/app/styles/components/query-results.scss
+++ b/src/app/styles/components/query-results.scss
@@ -27,6 +27,7 @@
   .results-list {
     flex-basis: 100%;
     min-width: 0;
+    max-width: 100%;
     margin-top: $spacer * 0.5;
     padding: 0;
     list-style-type: none;
